mvn clean install ok without opening the module, but: -need to open the test package explicitly in the surefire conf -need to add magic flag <forkCount>0</forkCount> otherwise surefire crashes